<resources>
    <string name="app_name">Dungeons And Dragons</string>
    <string name="create_character">Create character</string>
    <string name="delete_character">Delete character</string>
    <string name="character_name">Name</string>
    <string name="title_activity_character">Character</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="storage">Хранилище персонажей</string>
    <string name="your_character">Ваш персонаж</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">ИМЯ</string>
    <string name="race">РАСА</string>
    <string name="level">УРОВЕНЬ</string>
    <string name="xp">ОПЫТ</string>

    <string name="KD">КД</string>
    <string name="HP">Хиты</string>
    <string name="hp_dice">КХ</string>

    <string name="speed">Скорость</string>
    <string name="max_hp">Маскимум хитов</string>
    <string name="initiative">Инициатива</string>

    <string name="strength">Сила</string>
    <string name="dexterity">Ловкость</string>
    <string name="constitution">Телосложение</string>
    <string name="intelligence">Интеллект</string>
    <string name="wisdom">Мудрость</string>
    <string name="charisma">Харизма</string>

    <string name="add_new_weapon">Добавить новое оружие</string>
    <string name="new_weapon">Новое оружие</string>
    <string name="weapon_name">Название</string>
    <string name="damage">Урон</string>
    <string name="bonus">Бонус</string>

    <string name="spells">Заклинания</string>
    <string name="save_point">Спасбросок</string>
    <string name="cell_level">Уровень ячейки</string>
    <string name="characteristic">Характеристика</string>
    <string name="skills_and_features">Навыки и особенности</string>
    <string name="spell_cells">Ячейки заклинаний</string>
    <string name="level_for_field">Уровень</string>
    <string name="description">Описание</string>

    <string name="delete">Удалить</string>
    <string name="unshow">Убрать</string>
    
    <string name="mm">мм</string>
    <string name="sm">см</string>
    <string name="em">эм</string>
    <string name="zm">зм</string>
    <string name="pm">пм</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>