<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.9"
    tools:context=".New_weapon_activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/weapon_name"
        android:textSize="@dimen/textview_font3"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/shape_for_field"
        android:textColor="@color/black"
        android:textSize="@dimen/edittext_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/damage"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_for_field"
            android:textColor="@color/black"
            android:textSize="@dimen/edittext_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/bonus"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_for_field"
            android:textColor="@color/black"
            android:textSize="@dimen/edittext_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/description"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:lines="30"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/shape_for_field"
            android:textColor="@color/black"
            android:textSize="@dimen/edittext_font"
           />



    </LinearLayout>



</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textColor="@color/red_base"
            android:gravity="center"
            android:text="@string/delete"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textColor="@color/red_base"
            android:gravity="center"
            android:text="@string/unshow"/>


    </LinearLayout>

</LinearLayout>