<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="false"
    android:scrollbars="vertical"
    android:scrollbarSize="0dp" tools:context=".Magic">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Characteristics">

        <TextView
            android:id="@+id/spells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/spells"
            android:layout_marginTop="5sp"
            android:textColor="@color/black"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_spells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spells"
            />

        <TextView
            android:id="@+id/skills_and_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_spells"
            android:text="@string/skills_and_features"
            android:layout_marginTop="5sp"
            android:textColor="@color/black"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_skills_and_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/skills_and_features"
            />

        <TextView
            android:id="@+id/spell_cels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_skills_and_features"
            android:text="@string/spell_cells"
            android:layout_marginTop="5sp"
            android:textColor="@color/black"
            android:textSize="@dimen/textview_font3"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_spell_cels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spell_cels"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>